--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <span class="nav-dot"></span>
       <span class="nav-label">Abstract</span>
     </a>
-    <a href="#Layer Analysis" class="nav-item" data-target="Layer Analysis">
+    <a href="#Layer-Analysis" class="nav-item" data-target="Layer-Analysis">
       <span class="nav-dot"></span>
       <span class="nav-label">Analysis</span>
     </a>
@@ -67,7 +67,7 @@
       <span class="nav-dot"></span>
       <span class="nav-label">Visualization</span>
     </a>
-    <a href="#Quantitative Results" class="nav-item" data-target="Quantitative Results">
+    <a href="#Quantitative-Results" class="nav-item" data-target="Quantitative-Results">
       <span class="nav-dot"></span>
       <span class="nav-label">Experiments</span>
     </a>
@@ -185,10 +185,10 @@
                 <a href="https://qianqianwang68.github.io/">Qianqian Wang</a><sup>3</sup>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=cIK1hS8AAAAJ">Seungryong Kim</a><sup>1</sup>,
+                <a href="https://scholar.google.com/citations?user=cIK1hS8AAAAJ">Seungryong Kim</a><sup>1†</sup>,
               </span>
               <span class="author-block"></span>
-              <a href="https://scholar.google.com/citations?user=YeG8ZM0AAAAJ">Chen Feng</a><sup>4</sup>,
+              <a href="https://scholar.google.com/citations?user=YeG8ZM0AAAAJ">Chen Feng</a><sup>4†</sup>,
               </span>
             </div>
 
@@ -303,7 +303,7 @@
         <div class="column is-full-width">
 
           <h2 class="title is-3">Layer analysis</h2>
-          <div id="Layer Analysis">
+          <div id="Layer-Analysis">
             <img src="./static/images/analysis.png"
               style="display: block; margin: auto; width: 100%; max-width: 1000px;" alt="Overview Image">
             <figcaption style="text-align: left; margin-top: 10px; margin-bottom: 10px">
@@ -313,7 +313,7 @@
             </figcaption>
           </div>
 
-          <div id="Layer Analysis">
+          <div>
             <img src="./static/images/layer_analysis.png"
               style="display: block; margin: auto; width: 100%; max-width: 1000px;" alt="Overview Image">
             <figcaption style="text-align: left; margin-top: 10px; margin-bottom: 10px">
@@ -507,7 +507,7 @@
         <div class="column is-full-width">
 
           <h2 class="title is-3">Baseline Comparison Table</h2>
-          <div id="Quantitative Results">
+          <div id="Quantitative-Results">
             <embed src="./static/images/quan.png" style="display: block; margin: auto; width: 90%; max-width: 1000px;"
               alt="Overview Image">
           </div>
