--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
 
             <div class="column has-text-centered">
               <div class="publication-links">
+
+                <span class="link-block">
+                  <a href="./static/images/Emergent Outlier View Rejection in Visual Geometry Grounded Transformers.pdf"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Paper (High quality)</span>
+                  </a>
+                </span>
+
                 <span class="link-block">
                   <!-- add here later. -->
                   <a href="" class="external-link button is-normal is-rounded is-dark">
@@ -147,7 +158,8 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://github.com/cvlab-kaist/RobustVGGT" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/cvlab-kaist/RobustVGGT"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -157,10 +169,10 @@
               </div>
             </div>
 
-            </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
