docs: Update paper PDF link to external GitHub release and remove local asset.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="publication-links">
 
                 <span class="link-block">
-                  <a href="./static/images/Emergent Outlier View Rejection in Visual Geometry Grounded Transformers.pdf"
+                  <a href="https://github.com/cvlab-kaist/RobustVGGT/releases/download/paper/Emergent.Outlier.View.Rejection.in.Visual.Geometry.Grounded.Transformers.pdf"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
