Update arXiv link in index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                 <span class="link-block">
                   <!-- add here later. -->
-                  <a href="" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2512.04012" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
